@@ -1,6 +1,12 @@
 === Monitor Release Notes ===
-
 See [MonitorDocs/ResfulApi,Monitor application] for documentation
+
+
+== 2010/03/18 ==
+Added support for reading and updating server name from the bootstrap file, will be used for later bonjour support.
+Updated HTML forms for the embedded website.
+
+Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.3.zip V2.3] 
 
 == 2010/03/17 ==
 Added libs to the distribution zip, changed references from /ext to /monitor_ext to allow parallel isntallation
